--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,57 @@
-html,
+@import url('https://fonts.googleapis.com/css2?family=Monoton&family=Poppins:wght@300;400;600;700&display=swap');
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: #f2f2f2;
+  color: #333;
+  font-family: "Poppins";
 }
 
 a {
-  color: inherit;
+  color: #333;
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+.content {
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+nav {
+  margin: 10px auto 80px;
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  text-align: center;
+}
+
+nav a {
+  margin-left: 12px;
+}
+
+nav .logo {
+  margin: 0 0;
+  margin-right: auto;
+  font-weight: 900;
+  font-size: 35px;
+  font-family: "Monoton";
+  color: #2F66A9;
+}
+
+footer {
+  display: block;
+  text-align: center;
+  padding: 30px 0;
+  margin-top: 60px;
+  color: #777;
+  border-top: 1px solid #eaeaea;
+}
+
+.not-found {
+  text-align: center;
+}
+
+.not-found a {
+  color: #4979ff;
+  text-decoration: underline;
 }
