--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,48 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Poppins:wght@300;400;600;700&display=swap');
 
+:root {
+  --bg-color: #020B1B;
+  --bg-github: #111827;
+  --bg-gmail: #B91C1C;
+  --bg-facebook: #0369A1;
+  --bg-white: #fff;
+  --color-highlight: rgb(255, 168, 6);
+}
 body {
   margin: 0;
   box-sizing: border-box;
-  background: #020B1B;
+  background: var(--bg-color);
   color: white;
   font-family: "Poppins";
 }
-
 a {
-  color: white;
   text-decoration: none;
 }
-
 p,
 h2 {
   margin-bottom: 0 !important;
   margin-top: 0 !important;
 }
-
-.container-relative {
-  position: relative;
-}
-
-.flex-row-container {
-  display: flex;
-  flex-direction: row;
-  max-width: 1280px;
-  margin: 0 auto;
-}
-
-.container-left {
-  width: 50%;
-}
-
-.container-right {
-  width: 50%;
-  margin-left: 50px;
-}
-
 nav {
-  background-color: #020B1B !important;
+  background-color: var(--bg-color) !important;
 }
-
 nav .logo {
   margin: 0 0;
   margin-right: auto;
@@ -51,19 +34,73 @@ nav .logo {
   font-family: 'Concert One', cursive;  
   color: white;
 }
+.container-relative {
+  position: relative;
+}
+.flex-row-container {
+  display: flex;
+  flex-direction: row;
+  max-width: 1280px;
+  margin: 50px auto;
+}
+.container-left {
+  margin-top: 5%;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+}
+.container-left p, h1 {
+  margin: 0;
+}
+.container-left p {
+  font-size: 20px;
+  margin-bottom: 10px !important;
+}
+.container-left p:nth-of-type(1) {
+  opacity: .7;
+}
+.container-left p:nth-of-type(2) {
+  margin: 25px 0 !important;
+}
+.container-left b {
+  color: var(--color-highlight);
+}
+.container-left h1 {
+  font-size: 60px;
+}
+.line {
+  width: 65px;
+  height: 3px;
+  background: var(--color-highlight);
+  position: absolute;
+  border-radius: 5px;
+}
+.line::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: var(--color-highlight);
+  animation: animate 1s linear forwards;
+}
+.container-right {
+  width: 50%;
+  margin-left: 20%;
+}
+
+
 
 .footer-container {
   text-align: center;
   padding: 30px 0;
   margin-top: 60px;
-  color: #020F1D;
-  border-top: 1px solid #eaeaea;
-  background-color: white;
+  color: var(--bg-color);
+  background-color: var(--bg-white);
 }
 .footer-header {
   font-weight: 700;
   font-size: 20px;
-  color: #020B1B;
+  color: var(--bg-color);
 }
 .footer-centered-container {
   align-items: center;
@@ -75,19 +112,28 @@ nav .logo {
   font-weight: 600;
 }
 .github-button {
-  background-color: #111827 !important;
+  background-color: var(--bg-github) !important;
 }
 .gmail-button {
-  background-color: #B91C1C !important;
+  background-color: var(--bg-gmail) !important;
 }
 .facebook-button {
-  background-color: #0369A1 !important;
+  background-color: var(--bg-facebook) !important;
 }
 
 .not-found {
   text-align: center;
 }
 .not-found a {
-  color: #4979ff;
+  color: var(--bg-color);
   text-decoration: underline;
+}
+
+@keyframes animate {
+  0% {
+    left: 0;
+  }
+  100% {
+    left: 100%;
+  }
 }
