--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,13 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Poppins:wght@300;400;600;700&display=swap');
+
+html {
+  scroll-behavior: smooth;
+  font-family: "Poppins", sans-serif;
+}
 
 :root {
   --bg-color: #020B1B;
@@ -14,398 +23,8 @@ body {
   box-sizing: border-box;
   background: var(--bg-color);
   color: white;
-  font-family: "Poppins";
+ 
 }
 a {
   text-decoration: none;
-}
-p,
-h2 {
-  margin-bottom: 0 !important;
-  margin-top: 0 !important;
-}
-.h-100 {
-  height: 100%;
-}
-nav {
-  background-color: var(--bg-color) !important;
-}
-nav .logo {
-  justify-content: center;
-  align-items: center;
-  margin-right: auto;
-}
-nav .logo img {
-  margin-top: 8px;
-  margin-left: 15%;
-}
-.container-relative {
-  position: relative;
-  width: 100%;
-}
-.flex-row-container {
-  display: flex;
-  flex-direction: row;
-  max-width: 1280px;
-  margin: 50px auto;
-  height: 100vh;
-  position: relative;
-}
-.d-flex {
-  display: flex;
-  flex-direction: row;
-  max-width: 1580px;
-  margin: 20px auto;
-}
-.d-flex section {
-  margin: 30px;
-}
-.justify-content-center {
-  justify-content: center;
-  align-items: center;
-}
-
-a#scroll-btn {
-  position: absolute;
-  height: 4.5em;
-  width: 2.5em;
-  border: .4em solid #ffffff;
-  margin: auto;
-  left: 0;
-  right: 0;
-  bottom: 15.25em;
-  border-radius: 3em;
-  opacity: .5;
-}
-
-a#scroll-btn:before {
-  position: absolute;
-  content: "";
-  margin: auto;
-  left: 0;
-  right: 0;
-  height: 1em;
-  width: 1em;
-  background-color: #ffffff;
-  border-radius: 50%;
-  animation: move-down 2s infinite;
-}
-
-a#scroll-btn:after {
-  position: absolute;
-  content: "Scroll Down";
-  width: 12em;
-  display: block;
-  text-align: center;
-  left: -4.3em;
-  bottom: -3.2em;
-  font-size: 1em;
-  color: #ffffff;
-  letter-spacing: 3px;
-  font-weight: 600;
-}
-
-@keyframes move-down {
-  80% {
-    opacity: .5;
-  }
-  100% {
-    transform: translateY(3.3em);
-    opacity: 0;
-  }
-}
-.container-left {
-  margin-top: 5%;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-}
-.container-left p, h1 {
-  margin: 0;
-}
-.container-left span {
-  color: white;
-}
-.container-left p {
-  font-size: 20px;
-  margin-bottom: 10px !important;
-}
-.container-left p:nth-of-type(1) {
-  opacity: .7;
-}
-.container-left p:nth-of-type(2) {
-  margin: 25px 0 !important;
-}
-.container-left b {
-  color: var(--color-highlight);
-}
-.container-left h1 {
-  font-size: 60px;
-}
-.line {
-  width: 80px;
-  height: 3px;
-  background: var(--color-highlight);
-  position: absolute;
-  border-radius: 10px;
-}
-.line::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: var(--color-highlight);
-  animation: animate 1s linear forwards;
-}
-.container-right {
-  width: 50%;
-}
-.outline-btn{
-  color: white;
-  border-color: white;
-}
-.outline-btn:hover {
-  border-color: var(--color-highlight);
-  color: var(--color-highlight);
-}
-.footer-container {
-  text-align: center;
-  padding: 30px 0;
-  margin-top: 60px;
-  color: var(--bg-color);
-  background-color: var(--bg-white);
-}
-.footer-header {
-  font-weight: 700;
-  font-size: 20px;
-  color: var(--bg-color);
-}
-.footer-centered-container {
-  align-items: center;
-  justify-content: center;
-  margin: 25px 0;
-}
-.footer-centered-container button {
-  margin: 7px 10px;
-  font-weight: 600;
-}
-.github-button {
-  background-color: var(--bg-github) !important;
-}
-.gmail-button {
-  background-color: var(--bg-gmail) !important;
-}
-.facebook-button {
-  background-color: var(--bg-facebook) !important;
-}
-
-.not-found {
-  text-align: center;
-}
-.not-found a {
-  color: var(--bg-color);
-  text-decoration: underline;
-}
-
-.intro-left {
-  max-width: 500px;
-}
-.intro-left h1 {
-  font-size: 50px;
-}
-.highlight {
-  color: var(--color-highlight);
-  font-weight: bold;
-}
-.box-icon-left-container {
-  padding: 10px 20px;
-  text-align: center;
-  align-self: center;
-}
-.mx-20 {
-  max-width: 1580px;
-  margin: 20px auto;
-}
-.mx-20 section {
-  margin: 30px;
-}
-
-.wrapper{
-  max-width: 1080px;
-  margin: 50px auto;
-  padding: 0 20px;
-  position: relative;
-}
-.wrapper p, span, i {
-  color: black;
-}
-.wrapper .center-line{
-  position: absolute;
-  height: 100%;
-  width: 4px;
-  background: #fff;
-  left: 50%;
-  top: 20px;
-  transform: translateX(-50%);
-}
-.wrapper .row{
-  display: flex;
-}
-.wrapper .row-1{
-  justify-content: flex-start;
-}
-.wrapper .row-2{
-  justify-content: flex-end;
-}
-.wrapper .row section{
-  background: #fff;
-  border-radius: 5px;
-  width: calc(50% - 110px);
-  padding: 20px;
-  position: relative;
-}
-.wrapper .row section::before{
-  position: absolute;
-  content: "";
-  height: 15px;
-  width: 15px;
-  background: #fff;
-  top: 28px;
-  z-index: -1;
-  transform: rotate(45deg);
-}
-.row-1 section::before{
-  right: -7px;
-}
-.row-2 section::before{
-  left: -7px;
-}
-.row section .icon,
-.center-line .scroll-icon{
-  position: absolute;
-  background: #f2f2f2;
-  height: 40px;
-  width: 40px;
-  text-align: center;
-  line-height: 40px;
-  border-radius: 50%;
-  color: #ff7979;
-  font-size: 17px;
-  box-shadow: 0 0 0 4px #fff, inset 0 2px 0 rgba(0,0,0,0.08), 0 3px 0 4px rgba(0,0,0,0.05);
-}
-.center-line .scroll-icon{
-  bottom: 0px;
-  left: 50%;
-  font-size: 25px;
-  transform: translateX(-50%);
-}
-.row-1 section .icon{
-  top: 15px;
-  right: -60px;
-}
-.row-2 section .icon{
-  top: 15px;
-  left: -60px;
-}
-.row section .details,
-.row section .bottom{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.row section .details .title{
-  font-size: 22px;
-  font-weight: 600;
-}
-.row section p{
-  margin: 10px 0 17px 0;
-}
-.row section .bottom a{
-  text-decoration: none;
-  background: #ff7979;
-  color: #fff;
-  padding: 7px 15px;
-  border-radius: 5px;
-  /* font-size: 17px; */
-  font-weight: 400;
-  transition: all 0.3s ease;
-}
-.row section .bottom a:hover{
-  transform: scale(0.97);
-}
-
-@media only screen and (max-width:425px) {
-  .container-left h1 {
-    font-size: 45px !important;
-  }
-  .mx-20 {
-    max-width: none;
-  }
-  .wrapper {
-    max-width: none;
-    width: 100%;
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  .flex-row-container {
-    height: 100%;
-  }
-  a#scroll-btn {
-    display: none;
-  }
-  .d-flex {
-    flex-direction: column !important;
-  }
-}
-
-@media only screen and (max-width: 992px) {
-  .flex-row-container {
-    height: 100%;
-    padding-left: 30px;
-  }
-  .flex-row-container .container-left {
-    width: 100%;
-  }
-  .flex-row-container .container-right {
-    display: none;
-  }
-  a#scroll-btn {
-    display: none;
-  }
-  .d-flex {
-    flex-direction: column !important;
-  }
-  .intro-left {
-    min-width: 90%;
-  }
-}
-
-@media(max-width: 790px){
-  .wrapper .center-line{
-    left: 40px;
-  }
-  .wrapper .row{
-    margin: 30px 0 3px 30px;
-  }
-  .wrapper .row section{
-    width: 100%;
-  }
-  .row-1 section::before{
-    left: -7px;
-  }
-  .row-1 section .icon{
-    left: -60px;
-  }
-}
-
-@media(max-width: 440px){
-  .wrapper .center-line,
-  .row section::before,
-  .row section .icon{
-    display: none;
-  }
-  .wrapper .row{
-    margin: 10px 0;
-  }
 }
